FEAT: restructure microservice folder on auth-service
